--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascript assignments</title>
+    <title>Functions</title>
 </head>
 <body>
-    <h1>hello world!</h1>
-    
-
-
-
+    <h1 id="head" onclick="hello()">Hello abdullah</h1>
+    <button onclick="changePara(lorem)">click</button>
+    <p id="para">hello world</p>
 
     <script src="app.js"></script>
 </body>
